--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -1,7 +1,13 @@
 .list{
+    position: absolute;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
     gap:16px;
+    height: 100vh;  
+    width: auto;
+    margin-top: 40px;
 }
 .listItem{
     list-style: none;
@@ -24,4 +30,36 @@
     padding:8px;
     margin-top:8px;
 
+}
+
+/* Media Queries para ajustar o layout */
+@media (max-width: 1024px) {
+    .list {
+        grid-template-columns: 1fr 1fr; 
+        
+    }
+}
+
+@media (max-width: 768px) {
+    .list {
+        grid-template-columns: 1fr 1fr; 
+        margin-top: 140px;
+    
+    }
+    
+}
+
+@media (max-width: 480px) {
+    .list {
+        grid-template-columns: 1fr; 
+        gap: 8px; 
+    }
+
+    .listItem {
+        padding: 12px;
+    }
+
+    .itemLink {
+        padding: 6px; /* Ajuste o padding para telas menores */
+    }
 }
