--- a/src/global.css
+++ b/src/global.css
@@ -27,9 +27,10 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    max-height:auto;
     width: 100vw;
     background-color: var(--primaryColor);
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
 }
 
 
