--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -8,7 +8,7 @@
     height: 100vh;  
     width: auto;
     margin-top: 120px;
-    padding-too:200px;
+    padding-top:200px;
 }
 .listItem{
     list-style: none;
