--- a/src/global.css
+++ b/src/global.css
@@ -29,7 +29,7 @@
     height: 100vh;
     width: 100vw;
     background-color: var(--primaryColor);
-    margin-bot
+    margin-bottom:100px;
     padding-bottom: 6rem;
 }
 
