--- a/src/components/Perfil/Perfil.module.css
+++ b/src/components/Perfil/Perfil.module.css
@@ -3,8 +3,8 @@
     display: flex; /*para centralizar, foto e o nome ficarao um ao lado do outro*/
     flex-direction: column; /* para nome ficar embaixo de foto */
     align-items: center;/* centralizar o conteudo*/
-    padding:80px 0 40px;
-    margin-bottom: 40px;
+    padding:20px;
+    margin-bottom: 10px;
 }
 .avatar{
     width: 160px;
