--- a/src/global.css
+++ b/src/global.css
@@ -75,7 +75,7 @@
     }
 
     .input {
-        width: 20%;
+         width: 100px;
     }
 }
 
@@ -89,6 +89,6 @@
     }
 
     .input {
-        width: 20%; 
+        width: 100px;
     }
 }
