--- a/src/components/ReposList/ReposList.module.css
+++ b/src/components/ReposList/ReposList.module.css
@@ -1,3 +1,18 @@
+.loading{
+    display: flex;
+    margin-top: 30px;
+}
+
+.loading h1{
+    padding-right: 20px;
+}
+.loading img{
+    margin-top: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+
 .list{
     position: absolute;
     display: grid;
